// This template draws inspiration from the following source:
// github.com/lucasfth/go-ass5
// Which was created by chbl, fefa and luha
// The template itself was created by chbl and luha

syntax = "proto3";

package request;

option go_package = "https://github.com/ChrBank/disys-2021-exam;request";

service BiddingService{
    rpc Handshake (ClientHandshake) returns (stream BidResponse) {}
    rpc SendBid (Bid) returns (stream BidResponse) {}
}

message ClientHandshake {
    int32 clientPort = 1;
    string name = 2;
}

message Bid{
    string name = 1;
    int32 amount = 2;
}

message BidResponse{
     string response = 1; // Success, Fail, Exception
}

